Reestruturação da funcionalidade de atualização de Reserva e criação da classe Json.

--- a/ApiPousadaRecantoDosPapagaios/ApiPousadaRecantoDosPapagaios.csproj
+++ b/ApiPousadaRecantoDosPapagaios/ApiPousadaRecantoDosPapagaios.csproj
@@ -2,10 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>f9022123-fa68-4b39-80f9-7945a8199e9b</UserSecretsId>
+    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.90" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.14" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
